--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -17,7 +17,7 @@
         <nav aria-label="breadcrumb" class="d-flex align-items-start">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href=index.html>Home</a>
+                    <a asp-controller="Home" asp-action="Index">Home</a>
                 </li>
                 <li class="breadcrumb-item">
                     <a asp-area="Identity" asp-page="./Index">User</a>
