--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿@using CrucibleBugTracker.Enums;
+@using Microsoft.AspNetCore.Identity;
+
+@inject SignInManager<BTUser> SignInManager
+
 
 @{
     string? controllerName = ViewContext.RouteData.Values["controller"]?.ToString();
@@ -56,8 +60,8 @@
             <div class="header-container">
                 <div class="header-left">
                     <div class="navigation-toggler">
-                        <a href="#" data-action="navigation-toggler">
-                            <i data-feather="menu"></i>
+                        <a>
+                            <i data-feather="menu" data-action="navigation-toggler"></i>
                         </a>
                     </div>
 
@@ -72,34 +76,40 @@
                     <div class="header-body-left">
                         <ul class="navbar-nav">
                             <li class="nav-item mr-3">
-                                <div class="header-search-form">
-                                    <form>
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <button class="btn">
-                                                    <i data-feather="search"></i>
-                                                </button>
+                                @if (SignInManager.IsSignedIn(User))
+                                {
+                                    <div class="header-search-form">
+                                        <form>
+                                            <div id="searchBar" class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <button class="btn">
+                                                        <i data-feather="search"></i>
+                                                    </button>
+                                                </div>
+                                                <input type="text" class="form-control" placeholder="Search">
+                                                <div class="input-group-append">
+                                                    <button class="btn header-search-close-btn">
+                                                        <i data-feather="x"></i>
+                                                    </button>
+                                                </div>
                                             </div>
-                                            <input type="text" class="form-control" placeholder="Search">
-                                            <div class="input-group-append">
-                                                <button class="btn header-search-close-btn">
-                                                    <i data-feather="x"></i>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
+                                        </form>
+                                    </div>
+                                }
                             </li>
                         </ul>
                     </div>
 
                     <div class="header-body-right">
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a href="#" class="nav-link mobile-header-search-btn" title="Search">
-                                    <i data-feather="search"></i>
-                                </a>
-                            </li>
+                            @if (SignInManager.IsSignedIn(User))
+                            {
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link mobile-header-search-btn" title="Search">
+                                        <i data-feather="search"></i>
+                                    </a>
+                                </li>
+                            }
 
                             <li class="nav-item dropdown d-none d-md-block">
                                 <a href="#" class="nav-link" title="Fullscreen" data-toggle="fullscreen">
@@ -238,14 +248,6 @@
                         </ul>
                     </div>
                 </div>
-
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item header-toggler">
-                        <a href="#" class="nav-link">
-                            <i data-feather="arrow-down"></i>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </div>
         <!-- ./ Header -->
@@ -286,7 +288,7 @@
                             <li>
                                 <a id="company">
                                     <span class="nav-link-icon">
-                                        <i data-feather="pie-chart"></i>
+                                        <i data-feather="briefcase"></i>
                                     </span>
                                     <span>Company</span>
                                 </a>
@@ -299,7 +301,7 @@
                                         {
                                             <li>
                                                 <a asp-controller="Company" asp-action="ManageUserRoles">Manage Users</a>
-                                                <a asp-controller="Invites" asp-action="Create">Invite Users</a>
+                                                <a asp-controller="Invites" asp-action="Create">Invite User</a>
                                             </li>
                                         }
                                     }
@@ -447,28 +449,26 @@
     </script>
     <script>
         $(document).ready(function () {
-           let controller = '@controllerName';
+            let controller = '@controllerName';
 
-           switch (controller) {
-               case 'Home':
-                   $('#dashboard').addClass('active');
-                   $('#home').addClass('active');
-                   break;
-               case 'Projects':
-                   $('#projects').addClass('active');
-                   break;
-               case 'Tickets':
-                   $('#tickets').addClass('active');
-                   break;
-               case 'Company':
-               case 'Invites':
-                   $('#company').addClass('active');
-                   break;
-               default:
-                   break;
-           }
-
-
+            switch (controller) {
+                case 'Home':
+                    $('#dashboard').addClass('active');
+                    $('#home').addClass('active');
+                    break;
+                case 'Projects':
+                    $('#projects').addClass('active');
+                    break;
+                case 'Tickets':
+                    $('#tickets').addClass('active');
+                    break;
+                case 'Company':
+                case 'Invites':
+                    $('#company').addClass('active');
+                    break;
+                default:
+                    break;
+            }
         });
     </script>
     @await RenderSectionAsync("Scripts", required: false)
