--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -16,10 +16,10 @@
                     <p>
                         <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
                     </p>
-                    <form id="download-data" asp-page="DownloadPersonalData" class="d-flex justify-content-between" method="post">
+                    <form id="download-data" asp-page="DownloadPersonalData" class="mb-2" method="post">
                         <button class="btn btn-primary" type="submit">Download</button>
-                        <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
-                    </form>                        
+                    </form>
+                    <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
                 </div>
             </div>
         </div>
