--- a/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -56,7 +56,7 @@
                     }
                     else
                     {
-                        <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-primary">Set up authenticator app</a>
+                        <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-primary mb-sm-0 tinyMargin">Set up authenticator app</a>
                         <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-primary">Reset authenticator app</a>
                     }
                 }
