--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -53,10 +53,10 @@ ol {
 
 
 .manageUsers {
-    margin-right: 0;
-    margin-left: 0;
-    padding-left: 0;
-    --bs-gutter-x: 1.5rem;
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+    padding-left: 0px !important;
+    --bs-gutter-x: 0px !important;
 }
 
 @media (max-width: 991px) {
