--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -52,11 +52,11 @@
         <form id="account" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-group">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" placeholder="name@example.com" autofocus />
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" required autofocus />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" placeholder="password" />
+                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" required />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
@@ -69,32 +69,32 @@
                 <a href="recovery-password.html">Reset password</a>
             </div>
             <button id="login-submit" type="submit" class="btn btn-primary btn-block">Sign in</button>
-            <hr />
-            <section>
-                <h4>Or try the bug tracker with one of our demo accounts. </h4>
-
-                <div class="mb-1 text-center">
-                    <form class="" id="account" method="post">
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-12 btn-block text-center">
-                                    <button type="submit" style="width:inherit;height:min-content" class="btn btn-primary btn-block" name="demoEmail" value="DemoAdminEmail">Demo Admin</button>
-                                    <button type="submit" style="width:inherit;height:min-content" class="btn btn-primary btn-block" name="demoEmail" value="DemoPMEmail">Demo PM</button>
-                                    <button type="submit" style="width:inherit;height:min-content" class="btn btn-primary btn-block" name="demoEmail" value="DemoDevEmail">Demo Developer</button>
-                                    <button type="submit" style="width:inherit;height:min-content" class="btn btn-primary btn-block" name="demoEmail" value="DemoSubEmail">Demo Submitter</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-
-            </section>
-            <hr />
-            <p class="text-muted">Don't have an account?</p>
-            <a asp-page="./Register" class="btn btn-outline-light btn-sm">Register now!</a>
-            <a id="resend-confirmation" asp-page="./ResendEmailConfirmation" class="btn btn-outline-light btn-sm">Resend confirmation email</a>
+            <hr />            
         </form>
         <!-- ./ form -->
+        <section>
+            <h4>Or try the bug tracker with one of our demo accounts. </h4>
+
+            <div class="mb-1 text-center">
+                <form class="" id="account" method="post">
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-12 btn-block text-center">
+                                <button type="submit" style="width:inherit;height:min-content" class="btn btn-primary btn-block" name="demoEmail" value="DemoAdminEmail">Demo Admin</button>
+                                <button type="submit" style="width:inherit;height:min-content" class="btn btn-primary btn-block" name="demoEmail" value="DemoPMEmail">Demo PM</button>
+                                <button type="submit" style="width:inherit;height:min-content" class="btn btn-primary btn-block" name="demoEmail" value="DemoDevEmail">Demo Developer</button>
+                                <button type="submit" style="width:inherit;height:min-content" class="btn btn-primary btn-block" name="demoEmail" value="DemoSubEmail">Demo Submitter</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+        </section>
+        <hr />
+        <p class="text-muted">Don't have an account?</p>
+        <a asp-page="./Register" class="btn btn-outline-light btn-sm">Register now!</a>
+        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation" class="btn btn-outline-light btn-sm">Resend confirmation email</a>
     </div>
 
     <!-- Plugin scripts -->
