--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <li class="breadcrumb-item">
                     <a asp-area="Identity" asp-page="./Index">User</a>
                 </li>
-                <li class="breadcrumb-item active" aria-current="page">Settings</li>
+                <li class="breadcrumb-item active" aria-current="page">Manage Account</li>
             </ol>
         </nav>
     </div>
