--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -430,8 +430,8 @@
     <!-- DataTable -->
     <script src="~/vendors/dataTable/datatables.min.js"></script>
 
-    <!-- Dashboard scripts -->
-    <script src="~/assets/js/examples/pages/dashboard.js"></script>
+    @*<!-- Dashboard scripts -->
+    <script src="~/assets/js/examples/pages/dashboard.js"></script>*@
 
     <!-- Lightbox Javascript -->
     <script src="~/vendors/lightbox/jquery.magnific-popup.min.js"></script>
@@ -440,7 +440,7 @@
     <script src="~/vendors/ckeditor5/ckeditor.js"></script>
 
     <!-- App scripts -->
-@*    <script src="~/assets/js/app.js"></script>*@
+    <script src="~/assets/js/app.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
 
